Finalised last parts of code - removed unused sections

--- a/Assignment 2/Makefile
+++ b/Assignment 2/Makefile
@@ -11,6 +11,7 @@ clean:
 	rm */*.class
 run:
 	java -cp bin/ LSAVLApp 1 1 00
+	java -cp bin/ LSBSTApp 8 19 08
 	java -cp bin/ LSBSTApp 1 1 00
 run0:
 	java -cp bin/ LSAVLApp 9 1 00
