Added more GUI functionality. Now uses BST. Output redirection used instead of creating new method for text result

--- a/Assignment 2/Makefile
+++ b/Assignment 2/Makefile
@@ -14,6 +14,9 @@ run:
 	java -cp bin/ LSAVLApp 1 1 00 
 	java -cp bin/ LSBSTApp 1 1 00
 
+rundisplay:
+	java -cp bin/ AVLGui
+
 runtrial:
 	echo "Three valid parameters" >> results/output.txt
 	java -cp bin/ LSAVLApp 1 1 00 >> results/output.txt
